syntax = "proto3";

option csharp_namespace = "TuiHub.Protos";

package file;

service FileGrpc {
    rpc Upload(stream UploadRequest) returns (stream UploadResponse) {}
}

message UploadRequest {
    oneof content {
        MetaData meta_data = 1;
        FileBytes file_bytes = 2;
    }
}

message UploadResponse {
    string name = 1;
    Status status = 2;
    int64 received_size = 3;
}

message FileBytes {
    bytes content = 1;
}

message MetaData {
    string name = 1;
    int64 size = 2;
}

enum Status {
    PENDING = 0;
    IN_PROGRESS = 1;
    SUCCESS = 2;
    FAILED = 3;
}